<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:background="#2b2b2b"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <ImageButton
            android:layout_width="47dp"
            android:layout_height="44dp"
            android:id="@+id/_return"
            android:background="@drawable/return1"
            android:contentDescription="@string/return_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key"
        android:textSize="18sp"
        android:textColor="#fff"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".9"
        android:maxLines="1"
        android:textColor="#fff"
        android:layout_marginLeft="20dp"
        android:maxLength="10"
        android:layout_marginRight="20dp"
        android:id="@+id/edit"
        tools:ignore="LabelFor"
        android:inputType="none"
        android:lines="1"
        android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/query"
            android:layout_marginEnd="5dp"
            android:background="@drawable/selector"
            android:id="@+id/query"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:id="@+id/xt">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shower"
            android:contentDescription="@string/line"/>
        </LinearLayout>
</LinearLayout>