<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_marginBottom="10dp">
        <ImageButton
            android:layout_width="47dp"
            android:layout_height="44dp"
            android:id="@+id/_return"
            android:background="@drawable/return1"
            android:contentDescription="@string/return_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:textSize="18sp"
            android:textColor="#fff"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:maxLines="1"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:maxLength="10"
            android:layout_marginRight="20dp"
            android:id="@+id/edit"
            tools:ignore="LabelFor"
            android:inputType="none"
            android:lines="1"
            android:singleLine="true"
            android:textSize="16sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/query"
            android:layout_marginEnd="5dp"
            android:background="@drawable/selector"
            android:id="@+id/query"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="#000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="@string/command_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorNice"
            android:textSize="16sp"
            android:id="@+id/ComName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="#000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Category"
            android:textSize="16sp"
            android:textColor="@color/colorNice"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="#000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description1"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Description"
            android:textSize="16sp"
            android:textColor="@color/colorNice"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:background="#000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_appear_time"
            android:textSize="16sp"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AppearTime"
            android:textSize="16sp"
            android:textColor="@color/colorNice"
            android:textAlignment="center"
           />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:layout_gravity="center|center_vertical|center_horizontal"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ff0000"
        android:gravity="center|center_horizontal|center_vertical"
        android:layout_marginBottom="10dp"
        android:text="@string/copy_right"/>
</LinearLayout>
</LinearLayout>