<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#123456"
              android:gravity="center"
              android:orientation="horizontal"
              android:weightSum="1">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:background="@drawable/accessories"
        android:id="@+id/image2"
        android:contentDescription="@string/linux_image"
        android:layout_width="60dp"
        android:layout_height="60dp"/>
    <TextView
        android:layout_width="60dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:text="List"
        android:textColor="#ffffff"
        android:textAlignment="center"/>
    <ImageView

        android:background="@drawable/book"
        android:id="@+id/image3"
        android:contentDescription="@string/linux_image"
        android:layout_width="60dp"
        android:layout_height="60dp"/>
    <TextView
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginEnd="5dp"
        android:textColor="#ffffff"
        android:textAlignment="center"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/oopi"
            android:id="@+id/image1"
            android:contentDescription="@string/linux_image"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/bonus"
            android:textColor="#ffffff"
            android:textAlignment="center"/>
        <ImageView
            android:src="@drawable/settings0"
            android:id="@+id/image4"
            android:contentDescription="@string/linux_image"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#ffffff"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>
